# simplex

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
framework/: CMakeLists.txt
framework/include/: framework.h  gl_util.h  hello.h  resource.h  util.h
framework/src/: framework.cpp  hello.cpp
glapp/: CMakeLists.txt
glapp/shaders/: main.frag  main.vert
glapp/src/: main.cpp
simplex/: CMakeLists.txt
simplex/include/: glmutil.h  mesh.h  rotor.h  solids.h
simplex/shaders/: main.frag  main.vert  sect.frag  sect.geom  wire.frag  wire.geom
simplex/src/: main.cpp
